--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <head>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    </head>
   <body>
+    <div class="container">
     <h1>1) Authorize</h2>
 
     <a href="{{ github_authorize_url }}">{{ github_authorize_url }}</a>
@@ -29,14 +33,34 @@
       <p>Now enter the repo url you want to configure</p>
       <p>e.g. https://github.com/my-username/my-repo-name</p>
       <form id="form" action="/configure-repo" method="post">
-        Repo url: <input name="repo_url" id="repo_url" /> <br />
-        Organisation name or username: <input name="org_name" id="org_name" />
+
+        <label for="repo-choice">Select your repo:</label><br />
+        <input list="user-repos" id="repo_choice" name="repo-choice" placeholder="Start typing...">
+
+        <datalist id="user-repos">
+          {% for repo in repos %}
+            <option value="{{ repo }}">
+          {% endfor %}
+        </datalist>
         <br />
+        <hr />
+        Or, manually enter repo url: <input name="repo_url" id="repo_url" /> <br />
+        Organisation name or username: <input name="org_name" id="org_name" /> <br />
         repo_name <input name="repo_name" id="repo_name" />
-        <input type="submit" value="improve" />
+        <br /><br />
+        <input type="submit" value="automate my repo" />
+
       </form>
 
       <script>
+      repo_choice.addEventListener('focusout', function(e) {
+                console.log("okk");
+        parts = repo_choice.value.split("/")
+        let repo_name = parts[parts.length - 1]
+        let org_name = parts[parts.length - 2]
+        document.getElementById('repo_name').value = repo_name
+        document.getElementById('org_name').value = org_name
+              });
       // Get repo_name & org_name automatically from repo url
       repo_url.addEventListener('focusout', function(e) {
         parts = repo_url.value.split("/")
@@ -80,6 +104,6 @@
         </a>
     {% endif %}
 
-
+  </div>
   </body>
 </html>
