ability to re-connect github

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -39,6 +39,7 @@
     <h2 class="alert alert-warning">You need to connect Github first</h2>
     {% else %}
       <h2 class="alert alert-success">Congrats, Github is connected!</h2>
+      <a href="{{ github_authorize_url }}" class="btn btn-primary btn-lg" type="button">Re-connect GitHub</a>
       <hr />
 
     <h1>2) Auto configure repo</h2>
